removing all old recordings, adding new recordings to assets repo